# In-Memory-DB-Service

./: .gitignore  1_PRODUCT_REQUIREMENTS.md  2_TECHNICAL_DESIGN.md  3_EVALUATION.yaml  3_PERFORMANCE_OPTIMIZATION.md  4_CONTRIBUTING.md  Makefile  README.md
.github/workflows/: deploy-production.yml  deploy-staging.yml  test-backend.yml
backend/: .coveragerc  .env.example  .gitignore  API_EXAMPLES.md  Dockerfile  Dockerfile.dev  README.md  pyproject.toml  pytest.ini  requirements.txt
backend/app/: crud.py  initial_data.py  main.py  models.py  sample_data.json  utils.py
backend/app/api/: deps.py  main.py
backend/app/api/routes/: tables.py
backend/app/api/v1/: tables.py  utils.py
backend/app/core/: config.py  db.py
backend/app/db/: base.py  db.py  initial_data.py
backend/app/model/: order.py  user.py
backend/app/models/: order.py  user.py
backend/app/schemas/: base.py  order.py  user.py
backend/app/service/: order.py  user.py
backend/app/services/: base_service.py  order.py  order_service.py  user.py  user_service.py
backend/tests/: TESTING_STRATEGY.md  conftest.py  generate_test_report.py  sample_data.json  test_api_edge_cases.py  test_api_normal.py  test_api_performance.py  test_helpers.py  test_integration.py  test_orders.py  test_performance.py  test_tables.py  test_users.py  test_utils.py  test_validation.py
backend/tests/test_reports/: coverage.xml  test_report_20250321_225151.md  test_report_w_index.md  test_report_wo_index.md
backend/tests/test_src/: conftest.py  sample_data.json  test_api_edge_cases.py  test_api_main.py  test_api_normal.py  test_api_performance.py  test_api_utils.py  test_config.py  test_db.py  test_models.py  test_services.py  test_utils.py
deploy/: DEPLOYMENT.md  README.md  docker-compose.yml
